# dynamic_audio_sensing

./: .gitignore  CMakeLists.txt  Kconfig.projbuild  README.md  sdkconfig.old
components/audio_pipeline/: CMakeLists.txt  audio_frame.h  sample_process.c
components/dsp/: CMakeLists.txt  dsp_features.c  dsp_features.h
components/mic_input/: CMakeLists.txt  mic_input.c  mic_input.h
components/web/: CMakeLists.txt  component.mk  web_client.c  web_client.h  web_server.c  web_server.h  websocket_adapter.c  websocket_adapter.h
components/wifi_manager/: Kconfig  wifi_manager.c  wifi_manager.h
html/: main.css  main.js  root.html
main/: CMakeLists.txt  Kconfig  dynamic_audio_sensing.c  idf_component.yml  main.c
